[update]不具合修正
ランキングとマイリスの使いまわしていたソースで条件分岐の不備発見・修正

--- a/MyLibraryFactory/app/src/main/AndroidManifest.xml
+++ b/MyLibraryFactory/app/src/main/AndroidManifest.xml
@@ -18,6 +18,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".RankingActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".TempMyListActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".RecommendActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".MyListActivity"
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
