[update]コメント投稿
コメントを投稿する機能を追加

--- a/MyLibraryFactory/app/src/main/AndroidManifest.xml
+++ b/MyLibraryFactory/app/src/main/AndroidManifest.xml
@@ -30,6 +30,9 @@
         <activity android:name=".MyListActivity"
             android:screenOrientation="portrait">
         </activity>
+        <activity android:name=".SearchActivity"
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
